Complete - viewをtwob/viewあたりに持ってくる Complete - src直下のスクリプトを別の場所に追い出し、twoBのコンポーネントと明示的に分離する その他フォルダ整理 erb2viewにModuleを指定するように機能追加
git-svn-id: svn://192.168.0.6/devel/ruby/twoB/trunk@515 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/view/twob/thread/res_anchor.erb
+++ b/view/twob/thread/res_anchor.erb
@@ -1,3 +1,4 @@
+<%#@ module_name: TwoB %>
 <%#@ class_name: ResAnchorView %>
 <%#@ param: res_list %>
 <%#@ content_type: text/html; charset=UTF-8 %>
