--- a/tools/view_template.erb
+++ b/tools/view_template.erb
@@ -1,37 +1,39 @@
 require 'view_util'
 
-class <%= class_name %>
-  include ViewUtil
-
-  def initialize(<%= params.join(", ") %>)
-% params.each do |param|
-    @<%= param %> = <%= param %>
-% end
-  end
-
-% params.each do |param|
-  attr_reader :<%= param %>
-% end
-
-  def status_code
-    200
-  end
+module <%= module_name %>
+  class <%= class_name %>
+    include ViewUtil
   
-  def content_type
-    "<%= content_type %>"
-  end
-  
-  def headers
-    {"Content-Type" => content_type}
-  end
-
-  def write(_erbout)
-    def _erbout.concat(str)
-      self << str
+    def initialize(<%= params.join(", ") %>)
+% params.each do |param|
+      @<%= param %> = <%= param %>
+% end
     end
 
-% src.each_line do |line|
-    <%= line.strip %>
+% params.each do |param|
+    attr_reader :<%= param %>
 % end
+  
+    def status_code
+      200
+    end
+    
+    def content_type
+      "<%= content_type %>"
+    end
+    
+    def headers
+      {"Content-Type" => content_type}
+    end
+  
+    def write_body(_erbout)
+      def _erbout.concat(str)
+        self << str
+      end
+  
+% src.each_line do |line|
+      <%= line.strip %>
+% end
+    end
   end
 end
