スレ表示画面にdatへのリンクを追加
git-svn-id: svn://192.168.0.6/devel/twoB/trunk@533 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/view/twob/thread/thread.erb
+++ b/view/twob/thread/thread.erb
@@ -25,6 +25,7 @@
 			<li><a href="./l50#firstNew">新着50件</a></li>
 			<li><a href="#firstNew">新着に移動</a></li>
 			<li><a href="<%=h thread.original_url %>l50" target="_blank">ブラウザ表示</a></li>
+			<li><a id="view_dat_file" href="<%=h thread.dat_url %>" target="_blank">datファイル表示</a></li>
 % if thread.bookmarking?
 			<li><a href="delete_bookmark">ブックマークを削除</a></li>
 % end
