スレッド表示画面のメニューにキャッシュ削除を追加 キャッシュ削除後のリダイレクトがエラーになっていたので修正 TwoB::Request#initializeのヘッダにデフォルト値を設定 specのThreadDocument::Res#new?を、not existな場合はエラーとするように変更 キャッシュ削除のexampleを追加
git-svn-id: svn://192.168.0.6/devel/twoB/trunk@535 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/view/twob/thread/thread.erb
+++ b/view/twob/thread/thread.erb
@@ -20,10 +20,10 @@
 		<h1 id="title" class="title"><%=h thread.title %></h1>
 		<ul class="menu">
 			<li><a href="../">スレッド一覧</a></li>
-			<li><a href="write_res">書き込み</a></li>
 			<li><a href="./">全件表示</a></li>
-			<li><a href="./l50#firstNew">新着50件</a></li>
+			<li><a href="./l50">新着50件</a></li>
 			<li><a href="#firstNew">新着に移動</a></li>
+			<li><a href="./delete_cache">キャッシュを削除</a></li>
 			<li><a href="<%=h thread.original_url %>l50" target="_blank">ブラウザ表示</a></li>
 			<li><a id="view_dat_file" href="<%=h thread.dat_url %>" target="_blank">datファイル表示</a></li>
 % if thread.bookmarking?
