--- a/view/twob/thread/thread.erb
+++ b/view/twob/thread/thread.erb
@@ -23,7 +23,7 @@
 			<li><a href="./">全件表示</a></li>
 			<li><a href="./l50">新着50件</a></li>
 			<li><a href="#firstNew">新着に移動</a></li>
-			<li><a href="./delete_cache">キャッシュを削除</a></li>
+			<li><a href="./delete_cache?reload">キャッシュを再読み込み</a></li>
 			<li><a href="<%=h thread.original_url %>l50" target="_blank">ブラウザ表示</a></li>
 			<li><a id="view_dat_file" href="<%=h thread.dat_url %>" target="_blank">datファイル表示</a></li>
 % if thread.bookmarking?
