フォント指定
git-svn-id: svn://192.168.0.6/devel/twoB/trunk@579 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/web/thread.css
+++ b/web/thread.css
@@ -1,6 +1,13 @@
+@charset 'UTF-8';
+
 body, html {
 	margin: 0.3em;
 	padding: 0;
+}
+
+.body {
+	font-family: "ＭＳ Ｐゴシック", "IPA モナー Pゴシック";
+	font-size: 16px;
 }
 
 .title {
