フォント指定修正
git-svn-id: svn://192.168.0.6/devel/twoB/trunk@581 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/web/thread.css
+++ b/web/thread.css
@@ -6,8 +6,7 @@ body, html {
 }
 
 .body {
-	font-family: "ＭＳ Ｐゴシック", "IPA モナー Pゴシック";
-	font-size: 16px;
+	font-family: "IPA モナー Pゴシック", "IPAMonaPGothic", "ＭＳ Ｐゴシック";
 }
 
 .title {
