ブックマーク機能のバグを修正して使えるようにした
git-svn-id: svn://192.168.0.6/devel/twoB/trunk@593 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/view/twob/thread/res_anchor.erb
+++ b/view/twob/thread/res_anchor.erb
@@ -14,7 +14,7 @@
 </head>
 <body onload="javascript: b2rPopup.startup();">
 % res_list.each{|res|
-	<div id="_<%= res.number %>" class="res" style="<%= !res.visible? ? 'display: none;' : '' %>">
+	<div id="_<%= res.number %>" class="res">
 		<dl class="<%= res.new? ? 'new' : '' %> <%=h res.age? ? 'age' : '' %>">
 			<dt class="header">
 				<span class="number"><%= res.number %></span>
