subscribeをデフォルトに
- デフォルトのpickerをl50からsubscribe5に変更
- subscribe+5という形式はURL encodeと干渉しそうなので止め

git-svn-id: svn://192.168.0.6/devel/twoB/trunk@600 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/view/twob/board/board.erb
+++ b/view/twob/board/board.erb
@@ -34,7 +34,7 @@
 		<tr class="<%= thread.read? ? 'read' : '' %> <%= thread.has_new? ? 'new' : '' %>">
 			<td class="no"><%=h thread.order %></td>
 			<td class="title">
-				<a class="thread_link" href="<%= thread.number %>/l50#firstNew" target="_blank"><%=h thread.title %></a>
+				<a class="thread_link" href="<%= thread.number %>/subscribe5#firstNew" target="_blank"><%=h thread.title %></a>
 			</td>
 			<td class="count">
 				<%= thread.read_count %> / <%= thread.res_count %>
