--- a/view/twob/thread/thread.erb
+++ b/view/twob/thread/thread.erb
@@ -21,7 +21,7 @@
 		<ul class="menu">
 			<li><a href="../">スレッド一覧</a></li>
 			<li><a href="./">全件表示</a></li>
-			<li><a href="./l50">新着50件</a></li>
+			<li><a href="./subscribe5">新着</a></li>
 			<li><a href="#firstNew">新着に移動</a></li>
 			<li><a href="./delete_cache?reload">キャッシュを再読み込み</a></li>
 			<li><a href="<%=h thread.original_url %>l50" target="_blank">ブラウザ表示</a></li>
