余計なファイルを公開しないようにdocument_rootを./webに変更

--- a/view/erb/twob/board/board.erb
+++ b/view/erb/twob/board/board.erb
@@ -9,8 +9,8 @@
 	<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8"/>
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<meta http-equiv="Content-Style-Type" content="text/css"/>
-	<link rel="stylesheet" type="text/css" href="/twoB/web/style.css" />
-	<link rel="stylesheet" type="text/css" href="/twoB/web/board.css" />
+	<link rel="stylesheet" type="text/css" href="/style.css" />
+	<link rel="stylesheet" type="text/css" href="/board.css" />
 	<title><%= board.url %></title>
 </head>
 <body>
