--- a/view/erb/twob/thread/res_anchor.erb
+++ b/view/erb/twob/thread/res_anchor.erb
@@ -8,9 +8,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<link rel="stylesheet" type="text/css" href="/twoB/web/style.css" />
-	<link rel="stylesheet" type="text/css" href="/twoB/web/thread.css" />
-	<script type="text/javascript" src="/twoB/web/popup.js"></script>
+	<link rel="stylesheet" type="text/css" href="/style.css" />
+	<link rel="stylesheet" type="text/css" href="/thread.css" />
+	<script type="text/javascript" src="/popup.js"></script>
 </head>
 <body onload="javascript: b2rPopup.startup();">
 % res_list.each{|res|
