--- a/view/erb/twob/start_page.erb
+++ b/view/erb/twob/start_page.erb
@@ -10,7 +10,7 @@
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<title>twoB</title>
-	<link rel="stylesheet" type="text/css" href="/twoB/web/style.css" />
+	<link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 
 <body>
