--- a/view/erb/twob/thread/thread.erb
+++ b/view/erb/twob/thread/thread.erb
@@ -9,10 +9,10 @@
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<title><%=h thread.title %></title>
-	<link rel="stylesheet" type="text/css" href="/twoB/web/style.css" />
-	<link rel="stylesheet" type="text/css" href="/twoB/web/thread.css" />
-	<script type="text/javascript" src="/twoB/web/jquery-1.3.1.js"></script>
-	<script type="text/javascript" src="/twoB/web/popup.js"></script>
+	<link rel="stylesheet" type="text/css" href="/style.css" />
+	<link rel="stylesheet" type="text/css" href="/thread.css" />
+	<script type="text/javascript" src="/jquery-1.3.1.js"></script>
+	<script type="text/javascript" src="/popup.js"></script>
 </head>
 
 <body onload="javascript: b2rPopup.startup();">
