--- a/view/erb/twob/thread/thread.erb
+++ b/view/erb/twob/thread/thread.erb
@@ -20,10 +20,10 @@
 		<h1 id="title" class="title"><%=h thread.title %></h1>
 		<ul class="menu">
 			<li><a href="../">スレッド一覧</a></li>
-			<li><a href="./">全件表示</a></li>
+			<li><a href="./">全レス表示</a></li>
 			<li><a href="./subscribe5">続きを購読</a></li>
-			<li><a href="#firstNew">新着に移動</a></li>
-			<li><a href="./delete_cache?reload=subscribe5#firstNew">キャッシュを再読み込み</a></li>
+			<li><a href="#firstNew">新着にジャンプ</a></li>
+			<li><a href="./delete_cache?reload=subscribe5#firstNew">キャッシュをクリア</a></li>
 % if thread.bookmarking?
 			<li><a href="delete_bookmark">ブックマークを削除</a></li>
 % end
