--- a/view/erb/twob/start_page.erb
+++ b/view/erb/twob/start_page.erb
@@ -1,11 +1,9 @@
 <%#@ module_name: TwoB %>
 <%#@ class_name: StartPageView %>
 <%#@ param: request %>
-<%#@ content_type: application/xhtml+xml; charset=UTF-8 %>
-<?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<%#@ content_type: text/html; charset=UTF-8 %>
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
