--- a/view/erb/twob/thread/thread.erb
+++ b/view/erb/twob/thread/thread.erb
@@ -33,7 +33,8 @@
 	</div>
 
 	<div class="thread_body">
-% thread.each{|res|
+% thread.each_item do |item|
+%   item.case(TwoB::Res) do |res|
 		<div id="_<%= res.number %>" class="res">
 			<dl class="<%= res.new? ? 'new' : '' %> <%=h res.age? ? 'age' : '' %>">
 				<dt class="header">
@@ -45,26 +46,30 @@
 					<span class="bookmark">[<a href="<%= res.number %>/bookmark">栞</a>]</span>
 				</dt>
 				<dd class="body">
-%	res.body.each{|body|
-%		case body.body_type
-%		when :anchor
+%     res.body.each do |body|
+%       case body.body_type
+%         when :anchor
 <%				%><a href="#_<%= body.top_id %>" class="anchor" onmouseover="b2rPopup.resPopup.mouseOver(event, <%= body.top_id %>, <%= body.bottom_id %>, <%= thread.visible_all?(body) ? "b2rPopup.resPopup.local" : "b2rPopup.resPopup.remote" %>);"><%=h body %></a><% %>
-%		when :link
+%         when :link
 <%				%><a href="<%=h body.url %>" class="<%= body.link_type %>" target="_blank"><%=h body %></a><% %>
-%		when :break_line
+%         when :break_line
 <%				%><br/>
-%		else
+%         else
 <%				%><%= body %><% %>
-%		end
-% 	}
+%       end
+%     end
 
 				</dd>
 			</dl>
 		</div>
-%	if thread.read_number == res.number
+%   end
+%   item.gap do |gap|
+		<a href="#{gap.nextRes.number - 50}-"></a>
+%   end
+%   item.border do |border|
 		<hr id="firstNew" />
-%	end
-% }
+%   end
+% end
 	</div>
 </body>
 </html>
